validator signing info
